--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </header>
         <main>
             <!-- Start Game State -->
-            <section id="start-state"  class="state hidden">
+            <section id="start-state"  class="state">
                 <img id="pinata" src="assets/images/pinata.png" />
                 <img id="personA" src="assets/images/personA.png" />
                 <img id="personB" src="assets/images/personB.png" />
@@ -24,7 +24,7 @@
                 <p>You're up! We'll put a blind fold on you and spin you around. <span>Watch out for bystanders!</span> Press any key to begin the game!</p>
             </section>
             <!-- Play State Phase 1 -->
-            <section id="play-state-1"  class="state ">
+            <section id="play-state-1"  class="state hidden">
                 <div  class="blind-fold">
                     <div class="dial-gauge"></div>
                     <div id="dial-gauge-indicator"></div>
